2008-06-24  Johan Dahlin  <johan@flumotion.com>

	* flumotion/test/test_parts.py:
	(TestComponentsView.testCanNotStartWhenNoSelection)
	(TestComponentsView.testCanNotStopWhenNoSelection):
	Disable the last check as it we emit selection-changed in an idle now

	* flumotion/admin/gtk/adminwindow.py:
	* flumotion/admin/gtk/componentlist.py:
	* flumotion/test/test_parts.py:
	Do not reset the selection when a component starts/stops.
	Rename update to clearAndRebuild to make it easier to understand
	what's doing on. Update tests. Fixes #1033

2008-06-24  Johan Dahlin  <johan@flumotion.com>

	* flumotion/admin/gtk/adminwindow.py: Clean up the
	componentDo method which calls remote actions and updates the
	statusbar. Add documentation, use plural gettext and make it
	only display one string when updating multiple components.

	* flumotion/admin/gtk/componentlist.py:
	(ComponentList._selectionChanged): Clean up the code to
	set the selection and emit the selection-changed in an idle
	for speed reasons.

	* flumotion/admin/gtk/adminwindow.py:
	* flumotion/admin/gtk/componentlist.py:
	Transform the context menu into using GtkUIManager, reuse
	the callbacks and logic already used for the menu/toolbar.
	Fixes #1034

2008-06-23  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/consumers/gdp/gdp.py:
	  Remove unused imports/symbols.

2008-06-23  Johan Dahlin  <johan@flumotion.com>

	* data/glade/videotest.glade:
	* flumotion/component/producers/bttv/wizard.glade:
	* flumotion/component/producers/videotest/wizard.glade:
	* flumotion/component/producers/webcam/wizard.glade:
	Framerate -> Frame Rate. Fixes #1018

2008-06-23  Johan Dahlin  <johan@flumotion.com>

	* flumotion/admin/gtk/connections.py (Connections.grab_focus): Use
	len() instead of relying on __nonzero__, avoids focus grabbing attempt
	of non existing items.

	* data/glade/sectionwizard.glade:
	* flumotion/ui/wizard.py:
	Set a mnemonic for the Finish button, fixes #1032
